juno/qa/apps/k8-prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-prometheus
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: k8-prometheus-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - k8-prometheus.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: k8-prometheus.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
